--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "start": "ui5 serve --open index.html",
         "serve": "ui5 serve",
-        "build": "ui5 build --clean-dest --dest dist self-contained --all ",
+        "build": "ui5 build --clean-dest --dest docs self-contained --all ",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
