--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -5,6 +5,16 @@ on:
   pull_request:
 
 jobs:
+
+  remove-label:
+    runs-on: ubuntu-latest
+    name: Remove all labels
+    steps:
+      - uses: actions-ecosystem/action-remove-labels@v1
+        with:
+          labels: passed
+
+
   run-test:
     runs-on: ubuntu-latest
     name: Run Tests
@@ -33,28 +43,30 @@ jobs:
           branch: ${{ github.ref }}
           urls: "https://sap-samples.github.io/devtoberfest-2021-frontend-coding-challenge/" ## todo, remove hard coded URL build based on pattern https://[owner].github.io/[repo]/
 
-      - name: Echo
+      - name: Echo ## todo, remove
         run: echo "${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}"
         shell: bash 
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
+        if: steps.lighthouseCheck.outputs.lighthouseCheckResults.performance >= 70
         with:
-          message: 'Congrats, your web app achieved a performace score of  👋'
+          message: 'Congrats 🥳, your web app achieved a performace score of ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults.performance }}. Great job 💪!'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # if: steps.lighthouseCheck.outputs.lighthouseCheckResults.performance > 75
-        # uses: actions/github-script@0.3.0
-        # with:
-        #   github-token: ${{ secrets.GITHUB_TOKEN }}
-        #   script: |
-        #     const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-        #     github.issues.createComment({ issue_number, owner, repo, body: 'Congrats, your web app achieved a performace score of  👋' });
+
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        if: steps.lighthouseCheck.outputs.lighthouseCheckResults.performance < 70
+        with:
+          message: 'Thanks for creating this pull request. It seems that the performance of the SAPUI5 still has some room for improvements (currently ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults.performance }}). Feel free to push new commits to the repo to run this check again.'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Handle Lighthouse Check results
         uses: foo-software/lighthouse-check-status-action@master
         with:
           lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
-          minPerformanceScore: "2"
+          minPerformanceScore: "70" 
 
   assign-label:
     runs-on: ubuntu-latest
