--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -43,26 +43,25 @@ jobs:
           branch: ${{ github.ref }}
           urls: "https://sap-samples.github.io/devtoberfest-2021-frontend-coding-challenge/" ## todo, remove hard coded URL build based on pattern https://[owner].github.io/[repo]/
 
-      - name: Echo ## todo, remove
+      - name: Convert Output
         id: convertOutput
         run: |
           performance=$( echo '${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}' | jq '.data[0].scores.performance' )
           echo "::set-output performance=$performance"
-          echo "$performance"
         shell: bash
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
         if: steps.convertOutput.outputs.performance >= 70
         with:
-          message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults.performance }}. Great job 💪!"
+          message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.convertOutput.outputs.performance }}. Great job 💪!"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
         if: steps.convertOutput.outputs.performance < 70
         with:
-          message: "Thanks for creating this pull request. It seems that the performance of the SAPUI5 still has some room for improvements (currently ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults.performance }}). Feel free to push new commits to the repo to run this check again."
+          message: "Thanks for creating this pull request. It seems that the performance of the SAPUI5 still has some room for improvements (currently ${{ steps.convertOutput.outputs.performance }}). Feel free to push new commits to the repo to run this check again."
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Handle Lighthouse Check results
