--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -3,6 +3,7 @@ name: Run Tests and Lighthouse Performace Score
 on:
   workflow_dispatch:
   pull_request:
+    types: [synchronize]
 
 jobs:
   remove-label:
@@ -47,7 +48,7 @@ jobs:
         id: convertOutput
         run: |
           performance=$( echo '${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}' | jq '.data[0].scores.performance' )
-          echo "::set-output performance=$performance"
+          echo "::set-output name=performance::$performance"
         shell: bash
 
       - name: Comment PR
