--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -3,7 +3,7 @@ name: Run Tests and Lighthouse Performace Score
 on:
   workflow_dispatch:
   pull_request:
-    types: [synchronize]
+    types: [opened, synchronize, reopened]
 
 jobs:
   remove-label:
