--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -3,7 +3,7 @@ name: Run Tests and Lighthouse Performace Score
 on:
   workflow_dispatch:
   pull_request:
-    types: [synchronize]
+    types: [opened, synchronize, reopened]
 
 jobs:
   remove-label:
@@ -55,7 +55,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         if: steps.convertOutput.outputs.performance >= 70
         with:
-          message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.convertOutput.outputs.performance }}. Great job 💪!"
+          message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.convertOutput.outputs.performance }}. Great job 💪! \n\n So that we can [recognize your solution for the coding challenge](https://github.com/SAP-samples/devtoberfest-2021/blob/main/topics/Week6_Frontend/README.md#coding-challenge), please tell us your SAP Community profile URL in a reply to this comment; don't include any other text, just the URL on its own, like this:\n\n\`\`\`\nhttps://people.sap.com/your-user-name\n\`\`\`\n\nThanks!" \"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR
@@ -70,6 +70,12 @@ jobs:
         with:
           lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
           minPerformanceScore: "70"
+
+      - name: Echo
+        run: |
+          echo "${{ github.event }}"
+        shell: bash
+          
 
   assign-label:
     runs-on: ubuntu-latest
