--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Show GitHub context   
         env: 
           GITHUB_CONTEXT: ${{ toJson(github) }}   
-        run: echo "$GITHUB_CONTEXT" ```
+        run: echo "$GITHUB_CONTEXT" 
 
   run-test:
     runs-on: ubuntu-latest
