--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -37,14 +37,23 @@
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
             "type": "XML",
+            "async": true,
             "id": "idAppControl"
         },
         "dependencies": {
-            "minUI5Version": "1.60.0",
+            "minUI5Version": "1.95.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
-                "sap.ui.layout": {}
+                "sap.f": {
+                    "lazy": true
+                },
+                "sap.tnt": {
+                    "lazy": true
+                },
+                "sap.ui.layout": {
+                    "lazy": true
+                }
             }
         },
         "contentDensities": {
@@ -59,6 +68,7 @@
                 }
             },
             "sample": {
+                "preload": true,
                 "type": "sap.ui.model.json.JSONModel",
                 "dataSource": "dataSource"
             }
@@ -76,6 +86,7 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
+                "async": true,
                 "controlAggregation": "pages"
             },
             "routes": [
