--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -42,7 +42,8 @@ jobs:
           accessToken: ${{ secrets.LIGHTHOUSE_CHECK_GITHUB_ACCESS_TOKEN }}
           author: ${{ github.actor }}
           branch: ${{ github.ref }}
-          urls: "https://${{ github.actor }}.github.io/${{ github.name }}/" 
+          emulatedFormFactor: desktop
+          urls: "https://${{ github.actor }}.github.io/${{ github.event.repository.name  }}/"
 
       - name: Convert Output
         id: convertOutput
