--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -63,7 +63,7 @@ jobs:
               uses: thollander/actions-comment-pull-request@v1
               if: steps.convertOutput.outputs.performance < 70
               with:
-                  message: "Thanks for creating this pull request. It seems that the performance of the SAPUI5 still has some room for improvements (currently ${{ steps.convertOutput.outputs.performance }}). Feel free to push new commits to the repo to run this check again."
+                  message: "Thanks for creating this pull request. It seems that the performance of the SAPUI5 app still has some room for improvements (currently ${{ steps.convertOutput.outputs.performance }}). Feel free to push new commits to the repo to run this check again."
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Handle Lighthouse Check results
