fix: performace part 1

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "license": "Apache-2.0",
     "scripts": {
         "start": "ui5 serve --open index.html",
+        "start:docs": "ui5 "
         "serve": "ui5 serve",
-        "build": "ui5 build --clean-dest --dest docs self-contained --all ",
+        "build": "ui5 build --clean-dest --dest docs self-contained --all",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
