--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "author": "SAP SE",
     "license": "Apache-2.0",
     "scripts": {
-        "start": "ui5 serve --open index.html",
+        "start": "run-s build serve:docs",
+        "_start": "ui5 serve --open index.html",
+        "serve:docs": "ui5 --config ui5-docs.yaml serve",
         "serve": "ui5 serve",
         "build": "ui5 build --clean-dest --dest docs self-contained --all ",
         "prettier": "prettier -w .",
