--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -56,7 +56,9 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n"
+                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n",
+                    "supportedLocals": ["en"],
+                    "fallbackLocale": "en"
                 }
             },
             "sample": {
