--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -45,7 +45,8 @@
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
-                "sap.ui.layout": {}
+                "sap.ui.layout": {},
+                "sap.tnt": {}
             }
         },
         "contentDensities": {
