--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -37,14 +37,18 @@
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
             "type": "XML",
-            "id": "idAppControl"
+            "id": "idAppControl",
+            "async": true
         },
         "dependencies": {
             "minUI5Version": "1.60.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
-                "sap.ui.layout": {}
+                "sap.tnt": {},
+                "sap.ui.layout": {
+                    "lazy": true
+                }
             }
         },
         "contentDensities": {
@@ -55,7 +59,11 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n"
+                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n",
+                    "supportedLocales": [
+                        "en"
+                    ],
+                    "fallbackLocale": ""
                 }
             },
             "sample": {
@@ -76,13 +84,16 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
                     "name": "RouteMainView",
                     "pattern": "RouteMainView",
-                    "target": ["TargetMainView"]
+                    "target": [
+                        "TargetMainView"
+                    ]
                 }
             ],
             "targets": {
