feat: progressive bundle build

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "author": "SAP SE",
     "license": "Apache-2.0",
     "scripts": {
-        "start": "run-s build serve:docs",
-        "_start": "ui5 serve --open index.html",
-        "serve:docs": "ui5 --config ui5-docs.yaml serve",
-        "serve": "ui5 serve",
-        "build": "ui5 build --clean-dest --dest docs self-contained --all ",
+        "clean": "rimraf docs/*",
+        "start": "run-s build serve",
+        "start:dev": "ui5 serve --open index.html",
+        "serve": "ui5 --config ui5-docs.yaml serve",
+        "serve:dev": "ui5 serve",
+        "build:progressive": "ui5 build --exclude-task=generateFlexChangesBundle createDebugFiles --dest docs",
+        "build": "run-s clean build:progressive",
+        "build:std": "ui5 build --clean-dest --dest docs self-contained --all ",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
@@ -24,6 +27,7 @@
         "karma-ui5": "^2.3.4",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.4.1",
+        "rimraf": "^3.0.2",
         "shx": "^0.3.3",
         "ui5-middleware-livereload": "^0.5.8"
     },
