--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -37,9 +37,9 @@
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
             "type": "XML",
-            "id": "idAppControl"
+            "id": "idAppControl",
+            "async": true
         },
-        "async": true,
         "dependencies": {
             "minUI5Version": "1.60.0",
             "libs": {
@@ -72,13 +72,13 @@
             ]
         },
         "routing": {
-            "async": true,
             "config": {
                 "routerClass": "sap.m.routing.Router",
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
