--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -37,14 +37,18 @@
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
             "type": "XML",
+            "async": true,
             "id": "idAppControl"
         },
         "dependencies": {
-            "minUI5Version": "1.60.0",
+            "minUI5Version": "1.95.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
-                "sap.ui.layout": {}
+                "sap.tnt": {},
+                "sap.ui.layout": {
+                    "lazy": true
+                }
             }
         },
         "contentDensities": {
@@ -55,11 +59,16 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n"
+                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n",
+                    "supportedLocales": ["en"],
+                    "fallbackLocale": "en"
                 }
             },
             "sample": {
                 "type": "sap.ui.model.json.JSONModel",
+                "settings": {
+                    "sizeLimit": 1000
+                },
                 "dataSource": "dataSource"
             }
         },
@@ -76,6 +85,7 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
+                "async": true,
                 "controlAggregation": "pages"
             },
             "routes": [
