chore: revert back to self-contained build

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "serve": "ui5 --config ui5-docs.yaml serve",
         "serve:dev": "ui5 serve",
         "build:progressive": "ui5 build -a --exclude-task=generateFlexChangesBundle createDebugFiles --dest docs",
-        "build": "run-s clean build:progressive",
-        "build:std": "ui5 build --clean-dest --dest docs self-contained --all ",
+        "build": "run-s clean build:std",
+        "build:std": "ui5 build --exclude-task=generateFlexChangesBundle createDebugFiles --dest docs self-contained --all ",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
