Resource Bundle fix

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -3,7 +3,13 @@
     "sap.app": {
         "id": "com.devtoberfest.devtoberfests2021FrontendCodingChallenge",
         "type": "application",
-        "i18n": "i18n/i18n.properties",
+        "i18n": {
+            "bundleUrl": "i18n/i18n.properties",
+            "supportedLocales": [
+                ""
+            ],
+            "fallbackLocale": ""
+        },
         "applicationVersion": {
             "version": "1.0.0"
         },
