--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "scripts": {
         "start": "ui5 serve --open index.html",
         "serve": "ui5 serve",
-        "build": "ui5 build preload --dest docs ",
-        "buildnew": "ui5 build --exclude-task=* --include-task=generateManifestBundle --dest docs ",
-        "buildold": "ui5 build --clean-dest --dest docs self-contained --all ",
+        "build": "ui5 build preload --exclude-task=createDebugFiles --dest docs ",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
