--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -33,6 +33,7 @@
         }
     },
     "sap.ui5": {
+        "async": true,
         "flexEnabled": true,
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
@@ -60,7 +61,8 @@
             },
             "sample": {
                 "type": "sap.ui.model.json.JSONModel",
-                "dataSource": "dataSource"
+                "dataSource": "dataSource",
+                "preload": true
             }
         },
         "resources": {
@@ -76,13 +78,16 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
                     "name": "RouteMainView",
                     "pattern": "RouteMainView",
-                    "target": ["TargetMainView"]
+                    "target": [
+                        "TargetMainView"
+                    ]
                 }
             ],
             "targets": {
