--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -33,6 +33,7 @@
         }
     },
     "sap.ui5": {
+        "async": true,
         "flexEnabled": true,
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
@@ -40,7 +41,7 @@
             "id": "idAppControl"
         },
         "dependencies": {
-            "minUI5Version": "1.60.0",
+            "minUI5Version": "1.95.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
@@ -55,12 +56,18 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n"
+                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n",
+                    "supportedLocals": [
+                        "en",
+                        "de"
+                    ],
+                    "fallbackLocale": "en"
                 }
             },
             "sample": {
                 "type": "sap.ui.model.json.JSONModel",
-                "dataSource": "dataSource"
+                "dataSource": "dataSource",
+                "preload": true
             }
         },
         "resources": {
@@ -76,13 +83,16 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
                     "name": "RouteMainView",
                     "pattern": "RouteMainView",
-                    "target": ["TargetMainView"]
+                    "target": [
+                        "TargetMainView"
+                    ]
                 }
             ],
             "targets": {
