--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -69,7 +69,8 @@
             },
             "sample": {
                 "type": "sap.ui.model.json.JSONModel",
-                "dataSource": "dataSource"
+                "dataSource": "dataSource",
+                "preload": true
             }
         },
         "resources": {
