--- a/ui5.yaml
+++ b/ui5.yaml
@@ -18,7 +18,7 @@ framework:
         - name: themelib_sap_fiori_3
 server:
     customMiddleware:
-        - name: ui5-middleware-livereload
+        - name: fiori-tools-appreload
           afterMiddleware: compression
           configuration:
               port: 35729
