--- a/package.json
+++ b/package.json
@@ -23,17 +23,11 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.3.2",
         "shx": "^0.3.3",
-        "ui5-middleware-livereload": "^0.5.4",
-        "@sap/ui5-builder-webide-extension": "1.0.x",
-        "ui5-task-zipper": "^0.3.1",
-                "@sap/ux-ui5-tooling": "1"
+        "ui5-middleware-livereload": "^0.5.4"
     },
     "ui5": {
         "dependencies": [
-            "ui5-middleware-livereload",
-            "@sap/ux-ui5-tooling",
-            "@sap/ui5-builder-webide-extension",
-            "ui5-task-zipper"
+            "ui5-middleware-livereload"
         ]
     }
 }
