--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -37,14 +37,16 @@
         "rootView": {
             "viewName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view.MainView",
             "type": "XML",
-            "id": "idAppControl"
+            "id": "idAppControl",
+            "async": true
         },
         "dependencies": {
-            "minUI5Version": "1.60.0",
+            "minUI5Version": "1.96.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
-                "sap.ui.layout": {}
+                "sap.ui.layout": {},
+                "sap.tnt": {}
             }
         },
         "contentDensities": {
@@ -76,13 +78,16 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
                     "name": "RouteMainView",
                     "pattern": "RouteMainView",
-                    "target": ["TargetMainView"]
+                    "target": [
+                        "TargetMainView"
+                    ]
                 }
             ],
             "targets": {
