--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -40,7 +40,7 @@
             "id": "idAppControl"
         },
         "dependencies": {
-            "minUI5Version": "1.60.0",
+            "minUI5Version": "1.90.0",
             "libs": {
                 "sap.ui.core": {},
                 "sap.m": {},
@@ -76,7 +76,8 @@
                 "viewType": "XML",
                 "viewPath": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.view",
                 "controlId": "idAppControl",
-                "controlAggregation": "pages"
+                "controlAggregation": "pages",
+                "async": true
             },
             "routes": [
                 {
