--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "license": "Apache-2.0",
     "scripts": {
         "start": "ui5 serve --open index.html",
-        "serve": "ui5 serve",
-        "build": "ui5 build --clean-dest --dest docs self-contained --all ",
+        "serve": "ui5 serve ",
+        "build": "ui5 build --clean-dest --dest docs self-contained --all --exclude-task=createDebugFiles",
         "prettier": "prettier -w .",
         "test": "run-s karma",
         "karma": "run-s clearCoverage karma-ci",
