--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -3,7 +3,11 @@
     "sap.app": {
         "id": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge",
         "type": "application",
-        "i18n": "i18n/i18n.properties",
+        "i18n": {
+            "bundleUrl": "i18n/i18n.properties",
+            "supportedLocales": ["en"],
+            "fallbackLocale": "en"
+        },
         "applicationVersion": {
             "version": "1.0.0"
         },
@@ -58,7 +62,9 @@
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
-                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n"
+                    "bundleName": "com.devtoberfest.devtoberfest2021FrontendCodingChallenge.i18n.i18n",
+                    "supportedLocales": ["en"],
+                    "fallbackLocale": "en"
                 }
             },
             "sample": {
