remove unnecessary libs

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -48,10 +48,7 @@
             "minUI5Version": "1.60.0",
             "libs": {
                 "sap.ui.core": {},
-                "sap.m": {},
-                "sap.ui.layout": {
-                    "lazy": true
-                }
+                "sap.m": {}
             }
         },
         "contentDensities": {
